[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "DGet"
version = "1.0.0"
dependencies = [
    "numpy >= 2.0",
    "molmass",
]
description = "Calculates compound deuteration from ToF-MS data."
readme = "README.rst"
requires-python = ">= 3.9"
license = "GPL-3.0-or-later"
authors = [{name = "Thomas Lockwood", email = "thomas.lockwood@uts.edu.au"}]

[project.optional-dependencies]
tests = ["pytest"]
gui = ["PySide6 != 6.9.1", "pyqtgraph"]

[project.urls]
Homepage = "https://dget.app"
Repository = "https://gtihub.com/djdt/dget"
Documentation = "https://dget.readthedocs.io"

[project.scripts]
dget = "dget:__main__.main"

[project.gui-scripts]
dget-gui = "dget.gui:__main__.main"
